Changed to ./ to see if image will load

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <!-- Profile Card -->
             <div class="profile-card">
-                <img src="../icons/maxtorcito.png" alt="Profile Image">
+                <img src="./icons/maxtorcito.png" alt="Profile Image">
                 <div class="info">
                     Xalsier Kitsune
                     <hr>
