--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Xalsier</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/history-map.css">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index-nav.css">
+    <script src="/libraries/jquery.js" crossorigin="anonymous"></script>
    </head>
 <body>
     <main>
@@ -50,6 +51,7 @@
             </div>
         </div>
     </main>
-    <script src="main.js"></script>
+    <script src="/javascript/config.js"></script>
+    <script src="/javascript/main.js"></script>
 </body>
 </html>
