Testing relative urls

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xalsier</title>
-    <link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/history-map.css">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/index-nav.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/history-map.css">
+    <link rel="stylesheet" type="text/css" href="./stylesheets/index-nav.css">
     <script src="../libraries/jquery.js" crossorigin="anonymous"></script>
    </head>
 <body>
@@ -51,7 +51,7 @@
             </div>
         </div>
     </main>
-    <script src="../javascript/config.js"></script>
-    <script src="../javascript/main.js"></script>
+    <script src="./javascript/config.js"></script>
+    <script src="./javascript/main.js"></script>
 </body>
 </html>
