--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./stylesheets/style.css">
     <link rel="stylesheet" type="text/css" href="./stylesheets/history-map.css">
     <link rel="stylesheet" type="text/css" href="./stylesheets/index-nav.css">
-    <script src="../libraries/jquery.js" crossorigin="anonymous"></script>
+    <script src="./libraries/jquery.js" crossorigin="anonymous"></script>
    </head>
 <body>
     <main>
