Added Vendor Workshop

--- a/index.html
+++ b/index.html
@@ -40,18 +40,31 @@
             <div class="index-card">
                 <div class="header">Index</div>
                 <hr>
-                <div class="item"><span style="background-color:#a34848" class="css-circle my-background-circle"></span>
-                  <span class="my-background-text" style="opacity: 1;color:#a34848">My Background</span></div>
-                <div class="item"><span class="css-circle"></span>
-                  <span style="opacity: 0.3;">Birth by Memory</span></div>
-                <div class="item"><span class="css-circle"></span>
-                  <span style="opacity: 0.3;">Artwork Portfolio</span></div>
-                <div class="item"><span class="css-circle"></span>
-                  <span style="opacity: 0.3;">Github Projects</span></div>
+                <div class="item">
+                    <span style="background-color:#a34848" class="css-circle my-background-circle"></span>
+                    <span class="my-background-text" style="opacity: 1; color:#a34848">My Background</span>
+                </div>
+                <div class="item">
+                    <span style="background-color:#a34848" class="css-circle workshop-circle"></span>
+                    <span style="opacity: 1; color:#a34848;" class="workshop-text">Vendor Workshop</span>
+                </div>
+                <div class="item">
+                    <span class="css-circle"></span>
+                    <span style="opacity: 0.3;">Artwork Portfolio</span>
+                </div>
+                <div class="item">
+                    <span class="css-circle"></span>
+                    <span style="opacity: 0.3;">Technical Projects</span>
+                </div>
             </div>
+            
+            
+
         </div>
     </main>
     <script src="./javascript/config.js"></script>
     <script src="./javascript/main.js"></script>
+    <script src="./javascript/data.js"></script>
+    <script src="./javascript/book.js"></script>
 </body>
 </html>
